feat: add email notifications via Microsoft Graph API
Add email notifications for backup, S3 sync, and maintenance failures
using Microsoft Graph API with OAuth2 client credentials flow.

- Notify on failure and send recovery emails when operations succeed
  after a previous failure
- Lazy Graph client initialization with config-based caching
- Secret expiry monitoring integrated in /api/health endpoint
- POST /api/notifications/test-email for validating configuration
- Dutch plain text emails with detailed operation context
- Exponential backoff with jitter for Graph API retries

--- a/config.example.json
+++ b/config.example.json
@@ -61,6 +61,15 @@
       "force_path_style": false
     }
   },
+  "notifications": {
+    "email": {
+      "tenant_id": "",
+      "client_id": "",
+      "client_secret": "",
+      "from_address": "",
+      "recipients": ""
+    }
+  },
   "log": {
     "level": "info",
     "format": "text"
